--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,8 +24,12 @@
     "@nebular/theme": "^9.0.3",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "ace-builds": "^1.7.1",
+    "bootstrap": "^5.1.3",
     "eva-icons": "^1.1.2",
+    "font-awesome": "^4.7.0",
     "ngx-markdown": "^13.1.0",
+    "ngx-markdown-editor": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
