--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@nebular/eva-icons": "9.0.3",
     "@nebular/theme": "^9.0.3",
     "@ngrx/effects": "^13.2.0",
@@ -28,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "eva-icons": "^1.1.2",
     "font-awesome": "^4.7.0",
+    "monaco-editor": "^0.33.0",
     "ngx-markdown": "^13.1.0",
     "ngx-markdown-editor": "^4.0.0",
     "rxjs": "~7.5.0",
