--- a/webapp/angular.json
+++ b/webapp/angular.json
@@ -28,12 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/ace-builds/src-min",
-                "output": "./assets/ace-builds/"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
