change api url to gcp hosting ip

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -1,5 +1,6 @@
 FROM golang:1.19.2-alpine3.15
 WORKDIR /app
+EXPOSE 8080
 COPY . .
 RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build  -o /out/main ./
