--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,16 +21,21 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@material/web": "^1.0.0-pre.8",
     "@nebular/eva-icons": "9.0.3",
     "@nebular/theme": "^9.0.3",
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@webcomponents/webcomponentsjs": "^2.8.0",
     "ace-builds": "^1.7.1",
     "bootstrap": "^5.1.3",
     "eva-icons": "^1.1.2",
     "font-awesome": "^4.7.0",
+    "lit": "^2.7.4",
     "ngx-markdown": "^13.1.0",
     "ngx-markdown-editor": "^4.0.0",
+    "rollup": "^3.22.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
